# rust-ili9341-init

./: Cargo.toml  Embed.toml  README.md  shell.nix
.cargo/: config.toml
src/: color.rs  ili9341.rs  main.rs
