[package]
name = "embedded-sos"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7.5"
stm32f4xx-hal = { version = "0.22.1", features = ["stm32f446"] }
panic-halt = "0.2.0"
ili9341 = "0.6.0"
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
#embedded_hal = "1.0.0"
